added filter section touser profile.

--- a/public/pages/navigate/navigate.html
+++ b/public/pages/navigate/navigate.html
@@ -7,6 +7,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="/components/nav/nav.css">
     <link rel="stylesheet" href="/pages/navigate/navigate.css">
+    <link rel="stylesheet" href="/components/signup/signup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href='https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.css' rel='stylesheet' />
 
@@ -14,9 +15,11 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <script src="/admin/firebaseConfig.js"></script>
     <script src='https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.17.0/dist/algoliasearch.umd.js"></script>
+    <script type="module" src="/components/signup/signup.js"></script>
 </head>
 <body>
     <!-- Navigation -->
