--- a/public/pages/navigate/navigate.html
+++ b/public/pages/navigate/navigate.html
@@ -118,35 +118,35 @@
                         <div id="places" class="tab-content">
                             <div class="places-header">
                                 <div class="filter-section">
-                                    <button class="filter-button">
+                                    <button class="places-filter-button">
                                         <i class="fas fa-filter"></i>
                                         Filter
                                     </button>
-                                    <div class="selected-filter" style="display: none;">
+                                    <div class="places-selected-filter" style="display: none;">
                                         <i class="fas fa-th"></i>
                                         <span>All</span>
                                         <span>(6)</span>
                                     </div>
-                                    <div class="filter-menu">
-                                        <div class="filter-option selected">
+                                    <div class="places-filter-menu">
+                                        <div class="places-filter-option selected">
                                             <i class="fas fa-th"></i>
                                             <span>All</span>
-                                            <span class="filter-count">(6)</span>
+                                            <span class="places-filter-count">(6)</span>
                                         </div>
-                                        <div class="filter-option">
+                                        <div class="places-filter-option">
                                             <i class="fas fa-bed"></i>
                                             <span>To Stay</span>
-                                            <span class="filter-count">(0)</span>
+                                            <span class="places-filter-count">(0)</span>
                                         </div>
-                                        <div class="filter-option">
+                                        <div class="places-filter-option">
                                             <i class="fas fa-utensils"></i>
                                             <span>To Eat/Drink</span>
-                                            <span class="filter-count">(0)</span>
+                                            <span class="places-filter-count">(0)</span>
                                         </div>
-                                        <div class="filter-option">
+                                        <div class="places-filter-option">
                                             <i class="fas fa-hiking"></i>
                                             <span>To Do</span>
-                                            <span class="filter-count">(6)</span>
+                                            <span class="places-filter-count">(6)</span>
                                         </div>
                                     </div>
                                 </div>
