--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cipher</title>
+    <title>Cipher: Travel Memories Shared</title>
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Cipher App - Travel Memories Shared" />
+    <meta property="og:title" content="Cipher: Travel Memories Shared" />
     <meta property="og:description" content="Share your travel memories and experiences with friends and family using the Cipher app." />
-    <meta property="og:image" content="https://cipher-app.com/assets/adaptive-icon.png" />
+    <meta property="og:image" content="https://cipher-app.com/assets/Butterfly2.png" />
     <meta property="og:url" content="https://cipher-app.com" />
     <meta property="og:type" content="website" />
     <link rel="icon" type="image/png" href="/assets/Butterfly2.png">
