adding thumbnails and share modals (invite and share).

--- a/public/admin/console.html
+++ b/public/admin/console.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="/components/nav/nav.css">
     <link rel="stylesheet" href="/components/signup/signup.css">
+    <link rel="stylesheet" href="/components/modals/inviteModal.css">
+    <link rel="stylesheet" href="/utils/notifications.css">
+
     
     <!-- Add Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
@@ -20,6 +23,7 @@
     <!-- Then other scripts -->
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.22.1/dist/algoliasearch.umd.js"></script>
     <script type="module" src="/admin/config.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </head>
 <body>
     <!-- Navigation -->
