--- a/public/pages/navigate/navigate.html
+++ b/public/pages/navigate/navigate.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="/components/nav/nav.css">
     <link rel="stylesheet" href="/pages/navigate/navigate.css">
     <link rel="stylesheet" href="/components/signup/signup.css">
+    <link rel="stylesheet" href="/utils/notifications.css">
+    <link rel="stylesheet" href="/components/modals/inviteModal.css">
+    <link rel="stylesheet" href="/utils/thumbnailGenerator.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href='https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.css' rel='stylesheet' />
 
@@ -28,6 +31,8 @@
     <script src='https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.17.0/dist/algoliasearch.umd.js"></script>
     <script type="module" src="/components/signup/signup.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
 </head>
 <body>
     <!-- Navigation -->
