with thumbnails and share modals (invite and share) working on console and navigate pages.

--- a/public/admin/console.html
+++ b/public/admin/console.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="/components/nav/nav.css">
     <link rel="stylesheet" href="/components/signup/signup.css">
-    <link rel="stylesheet" href="/components/modals/inviteModal.css">
     <link rel="stylesheet" href="/utils/notifications.css">
+    <link rel="stylesheet" href="/pages/navigate/navigate.css">
+    <link rel="stylesheet" href="/components/modals/inviteModal.css">
+    <link rel="stylesheet" href="/utils/thumbnailGenerator.css">
 
     
     <!-- Add Firebase SDKs -->
@@ -29,7 +31,7 @@
     <!-- Navigation -->
     <div id="nav-container"></div>
     
-    <div class="page-container">
+    <div class="console-page-container">
         <!-- Left Sidebar -->
         <div class="sidebar">
             <div class="user-welcome">
@@ -222,7 +224,7 @@
                                 <ul id="attendeesSearchResults" class="attendees-list"></ul>
                             </div>
                             <div class="current-attendees">
-                                <div class="attendees-grid"></div>
+                                <div class="console-attendees-grid"></div>
                             </div>
                         </div>
 
