Big changes pushed.  left Archive.

--- a/!ARCHIVE/index.html
+++ b/!ARCHIVE/index.html
@@ -14,7 +14,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-storage-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
-    <script src="/admin/firebaseConfig.js"></script>
+    <script src="/utils/firebaseConfig.js"></script>
 </head>
 <body>
     <div id="authContainer" class="container">
