--- a/public/pages/preview/preview.html
+++ b/public/pages/preview/preview.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>Cipher: Preview Mode</title>
     <link rel="icon" type="image/png" href="/assets/Butterfly2.png">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Styles -->
     <link rel="stylesheet" href="/components/previewNav/previewNav.css">
     <link rel="stylesheet" href="/pages/navigate/navigate.css">
     <link rel="stylesheet" href="/components/signup/signup.css">
     <link rel="stylesheet" href="/pages/preview/preview.css">
+    <link rel="stylesheet" href="/components/mobileWarning/mobileWarning.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href='https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.css' rel='stylesheet' />
 
@@ -18,7 +21,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script src="/admin/firebaseConfig.js"></script>
+    <script src="/utils/firebaseConfig.js"></script>
     <script src='https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.17.0/dist/algoliasearch.umd.js"></script>
     <script type="module" src="/components/signup/signup.js"></script>
@@ -295,7 +298,7 @@
 
     <script type="module" src="/pages/preview/preview.js"></script>
     <script type="module" src="/components/previewNav/previewNav.js"></script>
-    <script src="/admin/clientConfig.js"></script>
+    <script src="/utils/clientConfig.js"></script>
     <div class="lightbox" id="lightbox">
         <button class="lightbox-close">&times;</button>
         <button class="lightbox-nav prev">&lt;</button>
