with modified homepage and mobile views.

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
+
     <!-- Firebase SDKs - load only once -->
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
@@ -34,7 +38,7 @@
     <div class="hero-wrapper">
         <section class="hero-section">
             <div class="left-content">
-                <img src="assets/Butterfly2.png" alt="Cipher Logo" class="hero-logo desktop-logo">
+                <img src="assets/s1.png" alt="Cipher Logo" class="hero-logo desktop-logo">
             </div>
             <div class="right-content">
                 <div class="title-wrapper">
@@ -63,7 +67,7 @@
                 </div>
 
                 <div class="mobile-download-section">
-                    <p class="download-text">DOWNLOAD NOW ON THE APP STORE</p>
+                    <!-- <p class="download-text">DOWNLOAD NOW ON THE APP STORE</p> -->
                     <a href="https://apps.apple.com/your-app-link" class="app-store-link">
                         <img src="assets/AppStoreBadge.svg" alt="Download on the App Store" class="app-store-badge">
                     </a>
@@ -71,6 +75,39 @@
             </div>
         </section>
     </div>
+
+    <section class="content-section">
+        <div class="screenshot-container">
+            <div class="screenshot-item">
+                <img src="assets/s11.png" alt="Trip & Profile">
+                <div class="screenshot-text">
+                    <h2>One place to relive and share your favorite experiences </h2>
+                    <p>This travel-focused social network gives you one place to remember all of the amazing travel experiences you've had with family and friends, and to browse experiences taken by the people you trust most - your friends and friends of friends.</p>
+                </div>
+            </div>
+            <div class="screenshot-item">
+                <div class="screenshot-text">
+                    <h2>Find Inspiration</h2>
+                    <p>Discover trips taken by your friends and others on the Cipher platform. Bookmark trips so you can come back to them later.</p>
+                </div>
+                <img src="assets/s22.png" alt="Discover & Search">
+            </div>
+            <div class="screenshot-item">
+                <img src="assets/s33.png" alt="Trip Details">
+                <div class="screenshot-text">
+                    <h2>No more e-mails, spreadsheets or photos saved in random places</h2>
+                    <p>It's all in one place with Cipher. Everyone you travel with can contribute, and can easily be shared with others</p>
+                </div>
+            </div>
+            <div class="screenshot-item">
+                <div class="screenshot-text">
+                    <h2>Add Your Group</h2>
+                    <p>Create once, and all of your travel companions benefit!</p>
+                </div>
+                <img src="assets/s5.png" alt="Add Attendees">
+            </div>
+        </div>
+    </section>
 
     <footer class="bottom-bar">
         <div class="footer-content">
