with updated og meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Cipher: Travel Memories Shared" />
     <meta property="og:description" content="Share your travel memories and experiences with friends and family using the Cipher app." />
-    <meta property="og:image" content="https://cipher-app.com/assets/Butterfly2.png" />
+    <meta property="og:image" content="https://cipher-app.com/assets/s11.png" />
     <meta property="og:url" content="https://cipher-app.com" />
     <meta property="og:type" content="website" />
     <link rel="icon" type="image/png" href="/assets/Butterfly2.png">
