--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Cipher: Travel Memories Shared</title>
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Cipher: Travel Memories Shared" />
+    <meta property="og:title" content="Cipher - Travel Memories Shared" />
     <meta property="og:description" content="Share your travel memories and experiences with friends and family using the Cipher app." />
     <meta property="og:image" content="https://cipher-app.com/assets/og-photo.png" />
     <meta property="og:url" content="https://cipher-app.com" />
