Fixed app store link

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
 
                 <div class="mobile-download-section">
                     <!-- <p class="download-text">DOWNLOAD NOW ON THE APP STORE</p> -->
-                    <a href="https://apps.apple.com/your-app-link" class="app-store-link">
+                    <a href="https://apps.apple.com/us/app/cipher-travel-memories-shared/id6503364756" class="app-store-link">
                         <img src="assets/AppStoreBadge.svg" alt="Download on the App Store" class="app-store-badge">
                     </a>
                 </div>
