changed home page to show download link

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,13 @@
                         <p class="subtitle">Travel Memories Shared</p>
                     </div>
                 </div>
+
+                <div class="mobile-download-section">
+                    <p class="download-text">DOWNLOAD NOW ON THE APP STORE</p>
+                    <a href="https://apps.apple.com/us/app/cipher-travel-memories-shared/id6503364756" class="app-store-link">
+                        <img src="assets/AppStoreBadge.svg" alt="Download on the App Store" class="app-store-badge">
+                    </a>
+                </div>
                 
                 <div class="auth-buttons desktop-auth">
                     <button onclick="showAuthModal('login')" class="auth-btn login">
@@ -66,12 +73,6 @@
                     </button>
                 </div>
 
-                <div class="mobile-download-section">
-                    <!-- <p class="download-text">DOWNLOAD NOW ON THE APP STORE</p> -->
-                    <a href="https://apps.apple.com/us/app/cipher-travel-memories-shared/id6503364756" class="app-store-link">
-                        <img src="assets/AppStoreBadge.svg" alt="Download on the App Store" class="app-store-badge">
-                    </a>
-                </div>
             </div>
         </section>
     </div>
